nft-qos: improve document for priority settings
For the priority of flow control, 1 is default and the highest.

Signed-off-by: Rosy Song <rosysong@rosinson.com>

--- a/net/nft-qos/files/nft-qos.config
+++ b/net/nft-qos/files/nft-qos.config
@@ -77,7 +77,7 @@ config default default
 # Traffic Priority Samples :
 #
 # protocol : tcp, udp, udplite, sctp, dccp, tcp is default
-# priority : integer between 1-11, 1 is default
+# priority : integer between 1-11, 1 is default and the highest
 # service : you can input a integer or service name, e.g. '22', '11-22', 'telnet', 'ssh, http, ftp', etc
 #
 #config priority
